# whisper-summary

./: .gitignore  Cargo.toml  README.md
misc-scripts/: fix-build-linking.sh
src/: lib.rs  main.rs
test/: test.md
test/audio-transcripts/: long-test.txt  tiny-test.txt
tests/: test.md  test.rs
tests/audio-transcripts/: short-test.txt
tests/results/: output-2024-06-13-20-45-15.txt  output-2024-06-14-08-34-22.txt
