[package]
name = "whisper-discord-bot"
version = "0.1.0"
edition = "2021"

[lib]
name = "whisperdiscordbot"
path = "src/lib.rs"

[dependencies]
hound = "3"

[dependencies.whisper-rs]
version = "0.11.1"
features = ["whisper-cpp-log"]

[target.'cfg(target_arch = "aarch64-apple-darwin")'.dependencies]
whisper-rs = { version = "0.11.1", features = ["whisper-cpp-log", "metal"] }

[target.'cfg(windows)'.dependencies]
whisper-rs = { version = "0.11.1", features = ["whisper-cpp-log", "cuda"] }

[dev-dependencies]
walkdir = "2"
chrono = "0.4"