[workspace]

[package]
name = "whisper-discord-bot"
authors = ["Bede Skinner-Vennell <bedesv@gmail.com>"]
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
name = "whisperdiscordbot"
path = "src/lib.rs"

[dependencies]
hound = "3"
dashmap = "5"
serenity = { features = ["client", "standard_framework", "voice"], version = "0.12" }
songbird = { git = "https://github.com/serenity-rs/songbird.git", default-features = true, features = ["receive"] }
symphonia = { features = ["aac", "mp3", "isomp4", "alac"], version = "0.5.2" }
tokio = { features = ["macros", "rt-multi-thread", "signal", "sync"], version = "1" }
tracing = "0.1"
tracing-subscriber = "0.3.18"
tracing-futures = "0.2"

# Enable metal on MacOS
[target.'cfg(all(target_os="macos", target_arch="aarch64"))'.dependencies]
whisper-rs = { git = "https://github.com/tazz4843/whisper-rs.git", rev = "744804a", features = ["whisper-cpp-log", "metal"] }

# Enable CUDA on Windows
[target.'cfg(windows)'.dependencies]
whisper-rs = { git = "https://github.com/tazz4843/whisper-rs.git", rev = "744804a", features = ["whisper-cpp-log", "cuda"] }

[dev-dependencies]
walkdir = "2"
chrono = "0.4"